# ChangeLog for kde-base/khelpcenter
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/khelpcenter/ChangeLog,v 1.132 2009/09/01 15:29:21 tampakrap Exp $

*khelpcenter-4.3.1 (01 Sep 2009)

  01 Sep 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +khelpcenter-4.3.1.ebuild:
  Version bump

  04 Aug 2009; Alex Alexander <wired@gentoo.org> ChangeLog:
  manifest update (upstream tarball changed)

*khelpcenter-4.3.0 (04 Aug 2009)

  04 Aug 2009; Alex Alexander <wired@gentoo.org> +khelpcenter-4.3.0.ebuild:
  Version bump

  12 Jul 2009; Raúl Porcel <armin76@gentoo.org> khelpcenter-3.5.10.ebuild:
  alpha/ia64/sparc stable wrt #271889

  08 Jul 2009; Alexey Shvetsov <alexxy@gentoo.org>
  khelpcenter-3.5.10.ebuild:
  Add ~mips keywords

  18 Jun 2009; Jeroen Roovers <jer@gentoo.org> khelpcenter-3.5.10.ebuild:
  Stable for HPPA (bug #271889).

  14 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -khelpcenter-4.2.3.ebuild:
  Drop KDE 4.2.3

  06 Jun 2009; Markus Meier <maekke@gentoo.org> khelpcenter-3.5.10.ebuild:
  amd64/x86 stable, bug #271889

  04 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org> khelpcenter-4.2.4.ebuild:
  Fix accidently added keywords

*khelpcenter-4.2.4 (04 Jun 2009)

  04 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org>
  +khelpcenter-4.2.4.ebuild:
  Version bump

  03 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -khelpcenter-4.2.2.ebuild:
  Drop KDE 4.2.2

  03 Jun 2009; Brent Baude <ranger@gentoo.org> khelpcenter-3.5.10.ebuild:
  Marking khelpcenter-3.5.10 ppc64 stable for bug 271889

  31 May 2009; nixnut <nixnut@gentoo.org> khelpcenter-3.5.10.ebuild:
  ppc stable #271889

*khelpcenter-4.2.3 (06 May 2009)

  06 May 2009; Tomas Chvatal <scarabeus@gentoo.org>
  +khelpcenter-4.2.3.ebuild:
  Version bump

  17 Apr 2009; Alexey Shvetsov <alexxy@gentoo.org> khelpcenter-4.2.2:
  Restore ~hppa keywords

  16 Apr 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -khelpcenter-4.2.1.ebuild:
  Drop KDE 4.2.1