@@ -1,0 +1,30 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/khelpcenter/khelpcenter-4.3.2.ebuild,v 1.1 2009/10/06 19:31:40 alexxy Exp $
+
+EAPI="2"
+
+KMNAME="kdebase-runtime"
+inherit kde4-meta
+
+DESCRIPTION="The KDE Help Center"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~x86"
+IUSE="debug +handbook"
+
+RDEPEND="
+	>=www-misc/htdig-3.2.0_beta6-r1
+"
+
+src_unpack() {
+	if use handbook; then
+		KMEXTRA="
+			doc/faq
+			doc/glossary
+			doc/quickstart
+			doc/userguide
+			doc/visualdict
+		"
+	fi
+
+	kde4-meta_src_unpack
+}
