@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/khelpcenter
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/khelpcenter/ChangeLog,v 1.132 2009/09/01 15:29:21 tampakrap Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/khelpcenter/ChangeLog,v 1.133 2009/10/06 19:31:40 alexxy Exp $
+
+*khelpcenter-4.3.2 (06 Oct 2009)
+
+  06 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org>
+  +khelpcenter-4.3.2.ebuild:
+  Version bump
 
 *khelpcenter-4.3.1 (01 Sep 2009)
 
